[bumpversion]
current_version = 4.0.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:bwapi/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
license_file = LICENSE.md

[flake8]
max-line-length = 88
ignore = E501,W503

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose

[bdist_wheel]
python-tag = py35
